# cf-data-struct

./: .gitignore  LICENSE  README.md  pyproject.toml
cf_data_struct/: __init__.py  acdd.py
cf_template_netcdf/: __init__.py  acdd.py
docs/examples/: simple_cf_data_struct.ipynb
src/: __init__.py
src/cf_data_struct/: __init__.py
src/cf_data_struct/datamodels/: __init__.py  acdd.py
src/cf_data_struct/datastruct/: __init__.py
tests/: test_cfvariable.py
